# Tensorrt_Mask2Former

./: Readme.md
Mask2Former/: checkpoint  run_test.sh
Mask2Former/demo/: Trt_test.py  demo.py  demo_Trt_test.py  export_model.py  predictor.py  torch_trace.py
Mask2Former/detectron2/detectron2/: _C.py
Mask2Former/detectron2/detectron2/engine/: defaults.py
Mask2Former/detectron2/detectron2/modeling/backbone/: resnet.py
Mask2Former/detectron2/detectron2/structures/: image_list.py
Mask2Former/mask2former/: maskformer_model.py  maskformer_model.py.bak
Mask2Former/mask2former/modeling/meta_arch/: mask_former_head.py
Mask2Former/mask2former/modeling/pixel_decoder/: msdeformattn.py
Mask2Former/mask2former/modeling/pixel_decoder/ops/functions/: ms_deform_attn_func.py
Mask2Former/mask2former/modeling/pixel_decoder/ops/modules/: ms_deform_attn.py
Mask2Former/mask2former/modeling/pixel_decoder/ops/src/: ms_deform_attn.h
Mask2Former/mask2former/modeling/pixel_decoder/ops/src/cuda/: ms_deform_attn_cuda.cu
Mask2Former/mask2former/modeling/transformer_decoder/: mask2former_transformer_decoder.py  position_encoding.py
Torch-TensorRT-universe/: .gitignore  CMakeLists.txt  WORKSPACE  compl.sh
Torch-TensorRT-universe/core/: compiler.cpp
Torch-TensorRT-universe/core/conversion/: conversion.cpp
Torch-TensorRT-universe/core/conversion/conversionctx/: ConversionCtx.cpp
Torch-TensorRT-universe/core/conversion/converters/: converter_util.cpp
Torch-TensorRT-universe/core/conversion/converters/impl/: activation.cpp  batch_norm.cpp  cast.cpp  cumsum.cpp  element_wise.cpp  expand.cpp  layer_norm.cpp  ms_deform_attn_tensorrt_forward.cpp  normalize.cpp  quantization.cpp  reflection_pad.cpp  replication_pad.cpp  select.cpp  select.cpp.bak  shuffle.cpp  squeeze.cpp  stack.cpp  topk.cpp  unary.cpp  unsqueeze.cpp
Torch-TensorRT-universe/core/conversion/evaluators/: aten.cpp  prim.cpp
Torch-TensorRT-universe/core/lowering/: register_trt_placeholder_ops.cpp
Torch-TensorRT-universe/core/lowering/passes/: reduce_to.cpp
Torch-TensorRT-universe/core/partitioning/: README.md  SegmentedBlock.cpp  SegmentedBlock.h  partitioning.cpp  partitioning.h  shape_analysis.cpp  shape_analysis.h
Torch-TensorRT-universe/core/plugins/: README.md
Torch-TensorRT-universe/core/plugins/impl/: normalize_plugin.h
Torch-TensorRT-universe/core/plugins/impl/LayerNormPlugin/: LayerNormPlugin.cu  LayerNormPlugin.h
Torch-TensorRT-universe/core/plugins/impl/deformAttnPlugin/: deform_attn_plugin.cu  deform_attn_plugin.h
Torch-TensorRT-universe/core/plugins/impl/groupNormalizationPlugin/: groupNormalizationKernel.cuh  groupNormalizationPlugin.cu  groupNormalizationPlugin.h
Torch-TensorRT-universe/core/plugins/impl/multiscaleDeformableAttnPlugin/: multiscaleDeformableAttnPlugin.cu  multiscaleDeformableAttnPlugin.h  multiscaleDeformableIm2ColCuda.cuh
Torch-TensorRT-universe/core/runtime/: TRTEngine.cpp  register_trt_op.cpp  runtime.h
Torch-TensorRT-universe/core/util/: trt_util.cpp  trt_util.h
Torch-TensorRT-universe/examples/custom_converters/: README.md  elu_model.py
Torch-TensorRT-universe/examples/custom_converters/elu_converter/: setup.py
Torch-TensorRT-universe/examples/int8/training/vgg16/: export_qat.py  finetune_qat.py  test_qat.py
Torch-TensorRT-universe/examples/torch_trt_compile/: TorchTrt_test.cpp
Torch-TensorRT-universe/py/: build_cmake.sh  setup.py
Torch-TensorRT-universe/py/torch_tensorrt/: ptq.py
Torch-TensorRT-universe/py/torch_tensorrt/csrc/: util.h
Torch-TensorRT-universe/tests/core/conversion/converters/: test_cast.cpp  test_expand.cpp  test_squeeze.cpp  test_unsqueeze.cpp
Torch-TensorRT-universe/tests/core/lowering/: test_conv1d_pass.cpp  test_module_fallback_passes.cpp  test_reduce_to_pass.cpp  test_silu_to_sigmoid_multiplication.cpp
Torch-TensorRT-universe/tests/core/partitioning/: partitioning_test.bzl  test_conditionals.cpp  test_segmentation.cpp  test_shape_analysis.cpp
Torch-TensorRT-universe/tests/py/: test_ptq_dataloader_calibrator.py  test_ptq_trt_calibrator.py  test_qat_trt_accuracy.py
